force-app/main/default/objects/AO_Form_Submission__c.object
<CustomObject>
    <fields>
        <fullName>AO_Deadline_Date__c</fullName>
        <description>Populate to ensure Student should submit this form by this date</description>
        <inlineHelpText>Populate to ensure Student should submit this form by this date</inlineHelpText>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AO_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Form Object for Mapping</description>
        <label>Form</label>
        <referenceTo>AO_Form__c</referenceTo>
        <relationshipLabel>Form Submissions</relationshipLabel>
        <relationshipName>Form_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Parent_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Submission should be captured in case of subsequent Forms</description>
        <label>Parent Submission</label>
        <referenceTo>AO_Form_Submission__c</referenceTo>
        <relationshipLabel>Form Submission</relationshipLabel>
        <relationshipName>Form_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Program_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is necessary to allocate a submission to Program Applicant</description>
        <label>Program Applicant</label>
        <referenceTo>AO_Program_Applicant__c</referenceTo>
        <relationshipLabel>Form Submission</relationshipLabel>
        <relationshipName>Form_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Program_Form_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Program Form Map</description>
        <label>Program Form Map</label>
        <referenceTo>AO_Program_Form_Map__c</referenceTo>
        <relationshipLabel>Form Submission</relationshipLabel>
        <relationshipName>Form_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Response_Json__c</fullName>
        <description>Json text to capture response of Form from Student</description>
        <label>Response Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AO_Status__c</fullName>
        <description>Status to be captured for Form Submission</description>
        <label>Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Re-process</fullName>
                    <isActive>false</isActive>
                    <label>Re-process</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Lookup</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Form Submission</relationshipLabel>
        <relationshipName>Form_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Submitted_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User Object for Mapping</description>
        <label>Submitted By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Form_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Submitted_Date__c</fullName>
        <description>Date when Form is submitted by Student</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <label>Form Submission</label>
    <listViews>
        <fullName>AO_Monash_Led_Programs_AO_Form_Submission</fullName>
        <columns>NAME</columns>
        <columns>AO_Student__c</columns>
        <columns>AO_Form__c</columns>
        <columns>AO_Submitted_Date__c</columns>
        <columns>AO_Program_Form_Map__c</columns>
        <columns>AO_Status__c</columns>
        <columns>AO_Program_Applicant__c</columns>
        <filterScope>Queue</filterScope>
        <label>Study Tours</label>
        <queue>AO_Study_Tours</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AO_Partner_Led_Programs_AO_Form_Submission</fullName>
        <columns>NAME</columns>
        <columns>AO_Student__c</columns>
        <columns>AO_Form__c</columns>
        <columns>AO_Submitted_Date__c</columns>
        <columns>AO_Program_Form_Map__c</columns>
        <columns>AO_Status__c</columns>
        <columns>AO_Program_Applicant__c</columns>
        <filterScope>Queue</filterScope>
        <label>MGCIs</label>
        <queue>AO_MGCIs</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AO_Semester_Exchange_Programs_AO_Form_Submission</fullName>
        <columns>NAME</columns>
        <columns>AO_Student__c</columns>
        <columns>AO_Form__c</columns>
        <columns>AO_Submitted_Date__c</columns>
        <columns>AO_Program_Form_Map__c</columns>
        <columns>AO_Status__c</columns>
        <columns>AO_Program_Applicant__c</columns>
        <filterScope>Queue</filterScope>
        <label>Exchanges</label>
        <queue>AO_Exchanges</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AO_Form__c</columns>
        <columns>AO_Student__c</columns>
        <columns>AO_Submitted_By_User__c</columns>
        <columns>AO_Status__c</columns>
        <columns>AO_Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Department_of_Psychology_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Department of Psychology</label>
        <queue>Department_of_Psychology</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fac_of_Arts_Global_Prog_s_Prtnrshps_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Fac of Arts, Global Prog&apos;s &amp; Prtnrshps</label>
        <queue>Fac_of_Arts_Global_Prog_s_Prtnrshps</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Faculty_of_Education_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Faculty of Education</label>
        <queue>Faculty_of_Education</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Faculty_of_Engineering_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Faculty of Engineering</label>
        <queue>Faculty_of_Engineering</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Faculty_of_IT_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Faculty of IT</label>
        <queue>Faculty_of_IT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Faculty_of_Law_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Faculty of Law</label>
        <queue>Faculty_of_Law</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Faculty_of_Pharmacy_Pharmaceutical_Sci_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Faculty of Pharmacy &amp; Pharmaceutical Sci</label>
        <queue>Faculty_of_Pharmacy_Pharmaceutical_Sci</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Faculty_of_Science_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Faculty of Science</label>
        <queue>Faculty_of_Science</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Monash_Art_Design_Architecture_MADA_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Monash Art, Design &amp; Architecture (MADA)</label>
        <queue>Monash_Art_Design_Architecture_MADA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Monash_Business_Schl_Global_Ptnrshps_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Monash Business Schl, Global Ptnrshps</label>
        <queue>Monash_Business_Schl_Global_Ptnrshps</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Monash_Business_School_MBA_contacts_AO_Form_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Monash Business School, MBA contacts</label>
        <queue>Monash_Business_School_MBA_contacts</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FS-{0000000}</displayFormat>
        <label>Form Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Submission</pluralLabel>
    <recordTypes>
        <fullName>Monash_Abroad</fullName>
        <active>true</active>
        <label>Monash Abroad</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AO_VALIDATE_Deadline_Date</fullName>
        <active>true</active>
        <description>Deadline Date on Form Submission should only be populated for Adhoc Forms</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(AO_Program_Form_Map__r.AO_Sequence__c ,&apos;Primary&apos;), 
 ISPICKVAL(AO_Program_Form_Map__r.AO_Sequence__c ,&apos;Subsequent&apos;)), NOT(ISBLANK(AO_Deadline_Date__c ) ))</errorConditionFormula>
        <errorDisplayField>AO_Deadline_Date__c</errorDisplayField>
        <errorMessage>Deadline date should not be updated for Primary or Subsequent Form Submissions</errorMessage>
    </validationRules>
</CustomObject>